--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <div class="items">
                         <ul type="none">
                             <li class="home"><a href="index.html">Home</a></li>
-                            <li><a href="edu.ht">Education</a></li>
+                            <li><a href="edu.html">Education</a></li>
                             <li><a href="skills.html">Skills and Personal Attributes</a></li>
                             <li><a href="ref.html">Reference</a></li>
                             <li><a href="new_weather.html">Weather Forecast</a></li>
